--- a/iOSapp/iOSapp/en.lproj/MainStoryboard.storyboard
+++ b/iOSapp/iOSapp/en.lproj/MainStoryboard.storyboard
@@ -200,19 +200,19 @@
             <point key="canvasLocation" x="143" y="162"/>
         </scene>
         <!--Friends View Controller - Friends-->
-        <scene sceneID="D2P-Uv-OQY">
+        <scene sceneID="b8Z-9U-CKk">
             <objects>
-                <viewController storyboardIdentifier="Friends" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Ag7-t0-4kA" customClass="FriendsViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Hvu-uM-Oey">
+                <viewController id="hCw-mo-8IR" customClass="FriendsViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="9KQ-tn-nlZ">
                         <rect key="frame" x="0.0" y="20" width="320" height="411"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Friends" image="112-group.png" id="bpg-t4-cZH"/>
+                    <tabBarItem key="tabBarItem" title="Friends" image="112-group.png" id="4sd-nL-uso"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="mKh-VM-bzT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OLd-ci-9Jh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="145" y="746"/>
+            <point key="canvasLocation" x="143" y="756"/>
         </scene>
         <!--Login View Controller-->
         <scene sceneID="2pI-h2-ALy">
@@ -283,7 +283,7 @@
                         <segue destination="pty-72-jfo" kind="relationship" relationship="viewControllers" id="KpV-la-a2u"/>
                         <segue destination="Eju-lv-Opj" kind="relationship" relationship="viewControllers" id="MQx-GG-qkM"/>
                         <segue destination="SFA-JV-zXM" kind="relationship" relationship="viewControllers" id="z5a-WW-BAO"/>
-                        <segue destination="Ag7-t0-4kA" kind="relationship" relationship="viewControllers" id="Q6f-7G-U72"/>
+                        <segue destination="hCw-mo-8IR" kind="relationship" relationship="viewControllers" id="jcn-MA-fSw"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5cx-a8-hj8" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -298,6 +298,64 @@
         <image name="96-book.png" width="18" height="26"/>
         <image name="fb_blank_profile_square.png" width="200" height="200"/>
     </resources>
+    <classes>
+        <class className="BioViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BioViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="bioText" candidateClass="RLCTextView"/>
+            </relationships>
+        </class>
+        <class className="ContactCell" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ContactCell.h"/>
+            <relationships>
+                <relationship kind="outlet" name="contactText" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="typeText" candidateClass="UITextField"/>
+            </relationships>
+        </class>
+        <class className="ContactsViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ContactsViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="navigation" candidateClass="UINavigationItem"/>
+            </relationships>
+        </class>
+        <class className="DataTabBarController" superclassName="UITabBarController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/DataTabBarController.h"/>
+        </class>
+        <class className="FBLoginView" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/FBLoginView.h"/>
+            <relationships>
+                <relationship kind="outlet" name="delegate"/>
+            </relationships>
+        </class>
+        <class className="FriendsViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/FriendsViewController.h"/>
+        </class>
+        <class className="LoginViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/LoginViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="fbLoginView" candidateClass="FBLoginView"/>
+            </relationships>
+        </class>
+        <class className="ProfileViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ProfileViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="birthdateText" candidateClass="RLCDateField"/>
+                <relationship kind="outlet" name="fbLoginView" candidateClass="FBLoginView"/>
+                <relationship kind="outlet" name="nameText" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="photoContainer" candidateClass="UIView"/>
+                <relationship kind="outlet" name="photoView" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="spinner" candidateClass="UIActivityIndicatorView"/>
+                <relationship kind="outlet" name="surnameText" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="textContainer" candidateClass="UIView"/>
+            </relationships>
+        </class>
+        <class className="RLCDateField" superclassName="UITextField">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/RLCDateField.h"/>
+        </class>
+        <class className="RLCTextView" superclassName="UITextView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/RLCTextView.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
